WIP trying to figure out issue with UJS on iOS

--- a/app/assets/stylesheets/components/_discussion.scss
+++ b/app/assets/stylesheets/components/_discussion.scss
@@ -3,6 +3,10 @@
   margin-right: 10px;
 }
 
+.delete-link {
+  cursor: pointer;
+}
+
 .counters {
   color: $blue;
 
